# Book_query_Resolver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
src/: embeddings.py  llm.py  loader.py  prompt.py  rag.py  retriver.py  splitter.py  vectorstore.py
