[project]
name = "book-query-resolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "jsonpatch>=1.33",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.6",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
]
