[project]
name = "book-query-resolver"
version = "0.1.0"
description = "Book Query Resolver using RAG with Mistral AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "streamlit",
    "python-dotenv",
    "faiss-cpu",
    "sentence-transformers",
    "torch",
    "pypdf",
    "numpy",
    "pandas",
    "tiktoken",
    "langchain-core==0.3.74",
    "langchain-community==0.3.27",
    "langchain-text-splitters==0.3.9",
    "langchain-mistralai==0.2.11",
    "langchain-huggingface==0.3.1",
    "jsonpatch==1.33",
    "transformers==4.55.4",
]
